--- a/style/style_375_667/style.css
+++ b/style/style_375_667/style.css
@@ -178,3 +178,13 @@ body {
         height:100%;
     }
 }
+
+@media (orientation: landscape) {
+    section {
+        grid-column:1/3;
+        grid-row:2/4;
+        
+        min-height:50px;
+    }
+}
+
