--- a/style/style_375_667/style_section.css
+++ b/style/style_375_667/style_section.css
@@ -346,4 +346,38 @@
     .sContainer2 ul li .languageName {
         font-size:2.5em;
     }
+    
+    .midiaContainer li a {
+        font-size:55px;
+    }
+    
+    .emailLogo {
+        width:25%;
+        font-size:50px;
+    }
+    
+    .theEmail {
+        width:80%;
+    }
+    
+    .theEmail a {
+        font-size:1.8em;
+    }
+    
+}
+
+@media (min-width: 1024px) and (orientation: landscape) {
+    .emailLogo {
+        width:25%;
+        font-size:70px;
+    }
+    
+    .theEmail {
+        width:75%;
+    }
+    
+    .theEmail a {
+        padding:25px;
+        font-size:2.8em;
+    }
 }
